# iwd_V94Q

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  iwd.py  requirements.txt  setup.py
iwd/: __main__.py  cmake.py  configuration.py  copy_util.py  directories.py  json_encoder.py  patch_util.py  quicktype.py  requirement.py  schema.json  tools.py
src/: main.cpp
src/iwd/: arguments.hpp  check_call.cpp  check_call.hpp  cmake_configuration.cpp  cmake_configuration.hpp  cmake_program.cpp  cmake_program.hpp  directories.cpp  directories.hpp  domain.cpp  domain.hpp  download_file.cpp  download_file.hpp  executable.cpp  executable.hpp  extract_tarfile.cpp  extract_tarfile.hpp  git_clone.cpp  git_clone.hpp  glob.cpp  glob.hpp  logging.hpp  parse_args.cpp  parse_args.hpp  patch.cpp  patch.hpp  requirements.cpp  requirements.hpp  subprocess.cpp  subprocess.hpp
src/iwd/quicktype/: iwd.hpp
src/vn/: directory.cpp  directory.hpp  error.cpp  error.hpp  file.cpp  file.hpp  fnmatch.cpp  fnmatch.hpp  function_pointer.hpp  glob.cpp  glob.hpp  iterator_range.hpp  iterator_range_impl.hpp  make_array.hpp  path.cpp  path.hpp  semantic_version.cpp  semantic_version.hpp  string_conversions.hpp  string_conversions_impl.hpp  string_template.cpp  string_template.hpp  string_utils.cpp  string_utils.hpp  string_utils_impl.hpp
src/vn/schema/: schema_tokenizer.hpp  token.hpp
test/: ab.patch  schema.cpp
test/b/data/cmake/: CMakeLists.txt
test/vn/: fnmatch.cpp  path.cpp  semantic_version.cpp  string_conversions.cpp  string_template.cpp  string_utils.cpp
